--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.0.0",
